fixed small graphical bug
page was exceeding the page size making it add a horizontal scroll bar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 html,body {
   margin: 0;
   background-color: rgba(21,32,43,1.00);
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   font-family: Noto Sans,Arial,sans-serif;
 }
