--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -27,7 +27,7 @@
   justify-content: center;
   flex: 1 1 auto;
   height: fit-content;
-  width: 98%;
+  width: 100%;
   margin-top: 20px;
 }
 
